Some fixes for Module 10

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ build
 /Module3/.vagrant
 /Additional/Module7/.vagrant
 /Additional/Module8/.vagrant/Module8/v2-log-collectioning/.vagrant
+/Module10/.vagrant
