--- a/Module10/Vagrantfile
+++ b/Module10/Vagrantfile
@@ -65,6 +65,7 @@ Vagrant.configure("2") do |config|
         firewall-cmd --permanent --zone public --add-service http
         firewall-cmd --permanent --zone public --add-service https
         firewall-cmd --reload
+
       SHELL
 
     end
@@ -92,10 +93,11 @@ Vagrant.configure("2") do |config|
 
         systemctl start firewalld
         systemctl enable firewalld
+
+        firewall-cmd --zone=public --add-port=22/tcp --permanent
         firewall-cmd --permanent --zone public --add-service http
         firewall-cmd --permanent --zone public --add-service https
         firewall-cmd --reload
-        systemctl stop firewalld
     SHELL
 
     # Directory for WinSCP
@@ -205,7 +207,6 @@ Vagrant.configure("2") do |config|
     #
     # Docker
     #
-    # Install Docker and create the foder /etc/DOCKER_DIR for convinient usage with WinSCP
     myserver.vm.provision "shell", inline: <<-SHELL
 
       echo "Debug: Install Docker" 
@@ -248,13 +249,6 @@ Vagrant.configure("2") do |config|
 
       docker swarm init --advertise-addr 192.168.0.10
       docker node ls
-
-      echo "Debug: For convinient usage with WinSCP"
-      mkdir /etc/DOCKER_DIR
-      chmod -R 777 /etc/DOCKER_DIR
-
-      echo "Debug: Increase used memory config for Elastic"
-      sysctl -w vm.max_map_count=262144
 
     SHELL
 
