--- a/Module10/Jenkinsfile
+++ b/Module10/Jenkinsfile
@@ -6,10 +6,6 @@ pipeline {
     }
 
    environment {
-     VERSION = '0.0.0'
-
-    
-     LOCAL_DOCKER_REGISTRY_URL = "localhost:5000"
      
      APP_URL_1 = "http://mynode1:8080/app/"
 
@@ -25,22 +21,74 @@ pipeline {
             }
         }
 
-         stage('Build docker image, publish it to docker registry, create swarm service') {
+         stage('Update Chef Cookbook') {
             steps {
                 script {
                     
-                    echo '..........................Build Chef Cookbook..........................'
-                    dir ('Module10') {
-                        
-                        echo '..........................upload updated cookbook and environment file to chef server..........................'
-                        sh "sudo cd /root/chef-repo/cookbooks"
-                        sh "sudo knife cookbook upload docker_run_book"
-                        sh "sudo knife cookbook list"
+                    echo '..........................Update default attributes with new version..........................'
 
-                        echo '..........................Start Client........................'                        
-                        sh "sudo knife node run_list add mynode1 \"recipe[docker_run_book]\""
-                        sh "sudo knife ssh 'name:mynode1' 'sudo chef-client --once -o docker_run_book' -x vagrant -P 'vagrant'"
-                        sh "sudo knife ssh 'name:mynode1' 'sudo docker -v' -x vagrant -P 'vagrant'"
+                    def basePath = "${env.WORKSPACE}/Module10/docker_run_book"
+                    println "Debug: Path : ${basePath}"
+
+                    File defaultAttributesFile = new File("${basePath}/attributes/default.rb")
+                    defaultAttributesFile.write "node.default['APP_VERSION']          = '${VERSION}'"
+ 
+                    println defaultAttributesFile.text
+
+                    echo '..........................Update metadata with new version..........................'
+
+                    File metadataFile = new File("${basePath}/metadata.rb")
+
+                    def lines = metadataFile.readLines()
+
+                    lines[lines.size()-1] = "version '${VERSION}'"
+
+                    metadataFile.write lines[0] + "\n"
+                    for (int i = 1; i < lines.size(); i++) {
+                        metadataFile << lines[i] + "\n"
+                    }
+
+                    println metadataFile.text
+                }  
+                
+            }
+        }
+
+        stage('Copy Cookbook to chef-repo directory') {
+            steps {
+                script {
+                    
+                    echo '..........................Copy Cookbook to chef-repo directory..........................'
+
+                    def basePath = "${env.WORKSPACE}/Module10/docker_run_book"
+                    sh "sudo cp -nr ${basePath} /root/chef-repo/cookbooks/"
+
+                }  
+                
+            }
+        }
+
+         stage('Upload updated cookbook to chef server') {
+            steps {
+                script {
+                        
+                    echo '..........................Upload updated cookbook and environment file to chef server..........................'
+                    sh "sudo cd /root/chef-repo/cookbooks"
+                    sh "sudo knife cookbook upload docker_run_book -c /root/chef-repo/.chef/knife.rb"
+                    sh "sudo knife cookbook list -c /root/chef-repo/.chef/knife.rb"
+                }  
+                
+            }
+        }
+
+         stage('Start Client') {
+            steps {
+                script {
+
+                        echo '..........................Start Client........................'
+                        sh "sudo knife node run_list add mynode1 \"recipe[docker_run_book]\" -c /root/chef-repo/.chef/knife.rb"
+                        sh "sudo knife ssh 'name:mynode1' 'sudo chef-client --once -o docker_run_book' -x vagrant -P 'vagrant' -c /root/chef-repo/.chef/knife.rb"
+                        sh "sudo knife ssh 'name:mynode1' 'sudo docker -v' -x vagrant -P 'vagrant' -c /root/chef-repo/.chef/knife.rb"
 
                         def versionCheckResultPort1 = sh (
                             script: "curl -X GET ${APP_URL_1} | grep ${VERSION} &>/dev/null && echo true || echo false",
@@ -52,14 +100,13 @@ pipeline {
                             script: "curl -X GET ${APP_URL_2} | grep ${VERSION} &>/dev/null && echo true || echo false",
                             returnStdout: true
                         ).trim()
-                        println "Version Check - Port 2: [${versionCheckResultPort2}]"
+                        println "Version Check - Port 2: [${versionChekResultPort2}]"
 
                         if(versionCheckResultPort1 != "true" && versionChekResultPort2 != "true") {
                             error("Build failed: version check doesn't pass")
                         }
 
                     }
-                }  
                 
             }
         }
