--- a/Module10/Vagrantfile
+++ b/Module10/Vagrantfile
@@ -364,6 +364,23 @@ Vagrant.configure("2") do |config|
 
     end
    
+    #
+    # Chef manager console
+    # https://192.168.0.10/organizations/testorganization/nodes
+    # admin/admin123
+    #
+    myserver.vm.provision "shell", inline: <<-SHELL
+
+        echo "Install Chef Manager Console"
+        cd ~/chef-repo/
+
+        wget https://packages.chef.io/files/stable/chef-manage/2.4.5/el/7/chef-manage-2.4.5-1.el7.x86_64.rpm
+        rpm -Uvh chef-manage-2.4.5-1.el7.x86_64.rpm
+
+        chef-manage-ctl reconfigure --accept-license
+        chef-manage-ctl reconfigure
+
+    SHELL
 
 
   end
