--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ build
 /Additional/Module7/.vagrant
 /Additional/Module8/.vagrant/Module8/v2-log-collectioning/.vagrant
 /Module10/.vagrant
+/Additional/Module8/.vagrant
+/Module9/.vagrant
