--- a/Module10/Jenkinsfile
+++ b/Module10/Jenkinsfile
@@ -35,6 +35,7 @@ pipeline {
  
                     println defaultAttributesFile.text
 
+
                     echo '..........................Update metadata with new version..........................'
 
                     File metadataFile = new File("${basePath}/metadata.rb")
@@ -49,6 +50,25 @@ pipeline {
                     }
 
                     println metadataFile.text
+
+
+                    echo '..........................Update dev environament with new version..........................'
+                    File envFile = "${env.WORKSPACE}/Module10/environments/dev.json"
+
+                    def lines = envFile.readLines()
+
+                    envFile.write lines[0] + "\n"
+                    for (int i = 1; i < lines.size(); i++) {
+                        def line = lines[i]
+
+                        if(line.contains("docker_run_book")) {
+                            line = "        \"docker_run_book\": \"= ${VERSION}\""
+                        }
+
+                        metadataFile << line + "\n"
+                    }
+
+                    println envFile.text
                 }  
                 
             }
@@ -57,13 +77,16 @@ pipeline {
         stage('Copy Cookbook to chef-repo directory') {
             steps {
                 script {
-                    
+
                     echo '..........................Copy Cookbook to chef-repo directory..........................'
+                    def pathToCookbook = "${env.WORKSPACE}/Module10/docker_run_book"
+                    sh "sudo cp -ru ${pathToCookbook} /root/chef-repo/cookbooks/"
 
-                    def basePath = "${env.WORKSPACE}/Module10/docker_run_book"
-                    sh "sudo cp -ru ${basePath} /root/chef-repo/cookbooks/"
+                    echo '..........................Copy Environments to chef-repo directory..........................'
+                    def pathToEnvironmants = "${env.WORKSPACE}/Module10/environments"
+                    sh "sudo cp -ru ${pathToEnvironmants} /root/chef-repo/"
 
-                }  
+                }
                 
             }
         }
@@ -71,11 +94,13 @@ pipeline {
          stage('Upload updated cookbook to chef server') {
             steps {
                 script {
-                        
-                    echo '..........................Upload updated cookbook and environment file to chef server..........................'
-                    sh "sudo cd /root/chef-repo/cookbooks"
-                    sh "sudo knife cookbook upload docker_run_book -c /root/chef-repo/.chef/knife.rb"
+
+                    echo '..........................Upload updated cookbook to chef server..........................'
+                    sh "sudo cd /root/chef-repo/cookbooks/docker_run_book && sudo berks install && berks upload"
                     sh "sudo knife cookbook list -c /root/chef-repo/.chef/knife.rb"
+
+                    echo '..........................Upload updated environment file to chef server..........................'
+                    sh "sudo knife environment from file /root/chef-repo/environments/dev.json -c /root/chef-repo/.chef/knife.rb"
                 }  
                 
             }
@@ -88,7 +113,7 @@ pipeline {
                         echo '..........................Start Client........................'
                         sh "sudo knife node run_list add ${NODE_NAME} \"recipe[docker_run_book]\" -c /root/chef-repo/.chef/knife.rb"
                         sh "sudo knife ssh 'name:${NODE_NAME}' 'sudo chef-client --once -o docker_run_book' -x vagrant -P 'vagrant' -c /root/chef-repo/.chef/knife.rb"
-                        sh "sudo knife ssh 'name:${NODE_NAME}' 'sudo docker -v' -x vagrant -P 'vagrant' -c /root/chef-repo/.chef/knife.rb"
+
 
                         def versionCheckResultPort1 = sh (
                             script: "curl -X GET ${APP_URL_1} | grep ${VERSION} &>/dev/null && echo true || echo false",
